# WinTraceX

./: Cargo.toml
src/: agent_dll.rs  main.rs
src/app/: mod.rs
src/app/widgets/: details_panel.rs  dll_table.rs  event_table.rs  left_panel.rs
src/hook/: injector.rs  mod.rs  udp_listener.rs
src/model/: dll.rs  event.rs  filters.rs  ipc.rs  process.rs
src/util/: ascii.rs  process_launch.rs  time_format.rs
